--- a/frontend/styles/globals.css
+++ b/frontend/styles/globals.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700;800&family=Pragati+Narrow:wght@400;700&family=Space+Grotesk:wght@300;400;500;600&display=swap");
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
